<resources>
    <string name="app_name">PushToHugo</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_git_title">Git Settings</string>
    <string name="pref_title_git_url">Repository URL</string>
    <string name="pref_default_git_url">https://github.com/</string>
    <string name="pref_title_git_auth_username">Username</string>
    <string name="pref_title_git_auth_password">Password</string>
    <string name="pref_title_git_committer_email">Committer Email</string>
    <string name="pref_title_git_committer_name">Committer Name</string>

    <string name="action_settings">Settings</string>

</resources>
