<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_git_title">

    <EditTextPreference
        android:defaultValue="@string/pref_default_git_url"
        android:key="pref_key_git_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_git_url" />

    <EditTextPreference
        android:key="pref_key_git_auth_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_git_auth_username" />

    <EditTextPreference
        android:key="pref_key_git_auth_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_git_auth_password" />

    <EditTextPreference
        android:key="pref_key_git_comitter_email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_git_committer_email" />

    <EditTextPreference
        android:key="pref_key_git_comitter_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_git_committer_name" />
    </PreferenceCategory>

</PreferenceScreen>
